--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,8 @@
 *.a
 *.dylib
 *.framework
-src/Release/
+/gproxy/Release/
+/bncsutil/vc8_build/Release/
 
 # OS generated files #
 ######################
