--- a/Release/gproxy.cfg
+++ b/Release/gproxy.cfg
@@ -1,10 +1,10 @@
 server = 160.187.146.137
-username = |cffbfff81Apple
-password = 123123
+username = thaison5011
+password = thaison5011
 channel = Warcraft 3 Frozen Throne
-war3version = 26
+war3version = 28
 port = 6175
 passwordhashtype = pvpgn
 filterhosts = 
-
-serveruploadfile = 160.187.146.137
+BotName = 
+BotMap = 
