--- a/Release/gproxy.cfg
+++ b/Release/gproxy.cfg
@@ -1,4 +1,4 @@
-server = 103.9.157.171
+server = 160.187.146.137
 username = thaison5011
 password = thaison5011
 channel = Warcraft 3 Frozen Throne
@@ -6,5 +6,5 @@ war3version = 28
 port = 6175
 passwordhashtype = pvpgn
 filterhosts = 
-BotName = botabc
-BotMap = xhero1f
+BotName = LOD
+BotMap = LOD
