--- a/Release/gproxy.cfg
+++ b/Release/gproxy.cfg
@@ -1,10 +1,11 @@
-server = 160.187.146.137
+server = thaison1995.pro
 username = thaison5011
-password = thaison5011
+password = thaison123
 BotName = botabc
-BotMap = 
+BotMap = vLOD1.7-F.w3x
 BotAPIName = LOD
-BotAPIMap = vLOD1.7-D.w3x
+BotAPIMap = vLOD1.7-F.w3x
 port = 6175
 war3version = 28
-War3Path = E:\Online Games\WarcraftIII
+War3Path = C:\Users\Administrator\Desktop\Warcraft3-128\Warcraft3-128
+ngon_ngu = 0
